# tee-time-booker

./: .gitignore  README.md  pyproject.toml
plans/: example.yaml
src/tee_time_booker/: __init__.py  book.py  cli.py  clock.py  config.py  constants.py  search.py  session.py
